release 1.0-ea (2008-10-xx)
- Support for EJB stateless session beans as resource classes.
  A local or remote interface may be annotated with JAX-RS annotations, for
  example the interface may be annotated with @Path to make the session bean
  a root resource class.
  When an application is deployed Jersey will attempt to look up any registeted
  root resource classes that are interfaces using JNDI where the fully qualified
  class name is the JNDI name. If an instance is found then the class is removed
  from registered set of classes and the instance is added to the registered set
  of singletons.
- Fixed issue 112
  https://jersey.dev.java.net/issues/show_bug.cgi?id=112
  JSON now works with JAXB annotated @XmlRootElement beans where
  the XML element name is declared by the annotation value.
- Improved JavaDoc of Jersey API.
- Support for JAXB with FastInfoset using the media type
  "application/fastinfoset".
- Content-Encoding using GZIP filters, see:
    com.sun.jersey.api.client.filter.GZIPContentEncodingFilter
    com.sun.jersey.api.container.filter.GZIPContentEncodingFilter
- Fixed issue 33
  https://jersey.dev.java.net/issues/show_bug.cgi?id=33
  Improve the scope of resource class validation and warnings.
- Fixed issue 109
  https://jersey.dev.java.net/issues/show_bug.cgi?id=109
  The LW HTTP server uses the Executors.newCachedThreadPool() as the
  default executor.
- Fixed issue 18
  https://jersey.dev.java.net/issues/show_bug.cgi?id=18
  Collections of JAXB beans are supported. See the jaxb sample.
- Fixed issue 6
  https://jersey.dev.java.net/issues/show_bug.cgi?id=6
  Client and server-side logging filters of requests and responses, see:
    com.sun.jersey.api.client.filter.LogggingFilter
    com.sun.jersey.api.container.filter.LoggingFilter
- Client API supports the sending and recieving of Java types that contain
  generic information, see:
    javax.ws.rs.core.GenericEntity
    com.sun.jersey.api.client.GenericType